[tool.poetry]
name = "cleanbay"
version = "0.2.0.beta"
description = "A metasearch engine for torrents"
authors = ["Gr3atWh173"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
requests = "^2.26.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
uvicorn = {extras = ["standard"], version = "^0.15.0"}
fastapi = "^0.68.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.0"
slowapi = "^0.1.5"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
