[tool.poetry]
name = "cleanbay"
version = "0.2.0.beta"
description = "A metasearch engine for torrents"
authors = ["Gr3atWh173"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.4"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
fastapi = "^0.109.2"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
slowapi = "^0.1.9"
pytest = "^8.0.0"
certifi = "^2024.2.2"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
